# BSPWallSearching

./: README.md  a6output0.37f-016f.pnm  a6output0129f-0.58123f.pnm  b238shell
Linux/: CMakeLists.txt  Components.cpp  Components.hpp  Sanitizers.cmake  compiles  demo  maze.pnm  runner.cpp
Windows/: maze.pnm
Windows/Source/: MazeRandomizer.cpp  components.cpp  components.hpp  program_properties.cpp  program_properties.hpp  runner.cpp
testingsfenv/: CMakeLists.txt  inputoutput.cpp
testingsfenv/src/: inputoutput.cpp
